Fix for an issue with OiRA specific radio buttons on small screen

--- a/prototype/_sass/components/_steps.scss
+++ b/prototype/_sass/components/_steps.scss
@@ -88,6 +88,7 @@
 
 		background: #efefef;
 		position: absolute;
+		z-index: 1;
 		left: 100%;
 		width: 100%;
 
